fix(navigation): adjust spacing for tablet safari

--- a/packages/components/src/components/bal-navigation/bal-navigation.sass
+++ b/packages/components/src/components/bal-navigation/bal-navigation.sass
@@ -149,7 +149,7 @@
     display: block
     +desktop
       padding-top: 2.5rem
-      padding-bottom: 2.5rem
+      padding-bottom: 1.5rem
     .bal-nav__menu__wrapper.columns
       margin-bottom: 0
       margin-top: 0
@@ -312,7 +312,7 @@
     .bal-popover__content__inner
       padding: 1rem
       +tablet
-        padding: 2rem 4.5rem
+        padding: 2rem 2.5rem
       +desktop
         padding: 1.5rem
     .bal-navigation-popover__button
@@ -327,3 +327,8 @@
       align-items: center
       justify-content: space-between
       margin-bottom: .75rem
+
+.bal-app--safari.bal-app--touch
+  .bal-nav__menu
+    +desktop
+      padding-bottom: 4.5rem
